--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ dependencies {
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    //logs
+    compile group: 'log4j', name: 'log4j', version: '1.2.16'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/org.hsqldb/hsqldb
+    testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
+    // https://mvnrepository.com/artifact/org.dbunit/dbunit
+    testCompile group: 'org.dbunit', name: 'dbunit', version: '2.6.0'
+
 }
